Another approach started

--- a/s4e02.ipynb
+++ b/s4e02.ipynb
@@ -16,7 +16,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "rCOKPdZ8yeKv",
         "colab": {
@@ -143,7 +143,7 @@
       "metadata": {
         "id": "f-hqFcTgz6t3"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -164,7 +164,7 @@
         },
         "outputId": "6cc7af13-0f75-4f01-e3f3-aabb72e2227d"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -194,7 +194,7 @@
       "metadata": {
         "id": "BIHNBUR2T02Y"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -210,7 +210,7 @@
         },
         "outputId": "50e38e7b-91ef-4c52-ce45-30b6ce8e18ea"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -747,7 +747,7 @@
         },
         "outputId": "2838fe5c-f8b9-45e5-9715-7981b61e7a09"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -793,7 +793,7 @@
         },
         "outputId": "b68c3ead-5a24-43dc-ede0-66b62ab72a60"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -845,7 +845,7 @@
       "metadata": {
         "id": "XkpHmGm2WelC"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -876,7 +876,7 @@
         },
         "outputId": "ad429fd4-a256-4c11-924c-80edaa1e8b62"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -910,7 +910,7 @@
         },
         "outputId": "b77a8b48-ca78-4c54-e6d2-d11525e5815d"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -946,7 +946,7 @@
         },
         "outputId": "3f4b7747-fa30-406e-9705-7fcfd1650b87"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -974,7 +974,7 @@
         },
         "outputId": "c457c02e-92e1-4f23-87f9-19be57621b14"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1011,7 +1011,7 @@
         "id": "ubj9hlCiyjiG",
         "outputId": "46400a6b-6661-4a95-d574-dab7b7bb1ece"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1048,7 +1048,7 @@
         "id": "Bh5gn2hPylHQ",
         "outputId": "640f9387-df01-44a2-b434-46a184cc208b"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1114,7 +1114,7 @@
         "id": "qfyQHBH5ynia",
         "outputId": "91203b7c-63d5-40d0-eefd-75567020a547"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1181,7 +1181,7 @@
       "metadata": {
         "id": "iHdmX3LR0iTf"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1247,7 +1247,7 @@
       "metadata": {
         "id": "dZd4Gl_fVh6a"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1269,7 +1269,7 @@
       "metadata": {
         "id": "nIvYV3YX7yA3"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1296,7 +1296,7 @@
       "metadata": {
         "id": "s1LUyRj0WQZa"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1319,7 +1319,7 @@
         },
         "outputId": "f084f6a9-9980-4f00-8eed-92ce59cc8060"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1419,7 +1419,7 @@
         },
         "outputId": "76d0b42a-f266-4347-9f9d-35b44b716cd9"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1443,7 +1443,7 @@
       "metadata": {
         "id": "HwpIsQHY1AEf"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1456,7 +1456,7 @@
       "metadata": {
         "id": "ZBs2Jhmh1Bek"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1500,7 +1500,7 @@
       "metadata": {
         "id": "HucF99A_1DMY"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1523,7 +1523,7 @@
         },
         "outputId": "df3ef790-4a25-4fb3-b8fd-ebf7f849a4af"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1627,7 +1627,7 @@
         },
         "outputId": "e4a9b0fa-babf-48f9-dac0-527731b9fc81"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1649,7 +1649,7 @@
       "metadata": {
         "id": "oJQ3r5-AWB_v"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1696,7 +1696,7 @@
       "metadata": {
         "id": "1Sl63H0wbaBZ"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1755,7 +1755,7 @@
         },
         "outputId": "b7720257-5606-4e83-c183-ada28dd5062e"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1779,7 +1779,7 @@
       "metadata": {
         "id": "hmatoRrikBB1"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1847,7 +1847,7 @@
         "id": "_6Qc52m9J452",
         "outputId": "0b1a8852-aa0a-45b7-ddb1-f51dbec7784f"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1882,7 +1882,7 @@
         "id": "clBEsg7FJ7tn",
         "outputId": "cb69f54e-0abc-4354-cba6-56ac1ba6d621"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2207,6 +2207,120 @@
           "execution_count": 57
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Another approach"
+      ],
+      "metadata": {
+        "id": "TaBH-xrG6faH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Data Visualization Libraries\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "# linear algebra & data processing\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "\n",
+        "# Input data files are available in the read-only \"../input/\" directory\n",
+        "# For example, running this (by clicking run or pressing Shift+Enter) will list all files under the input directory\n",
+        "import os\n",
+        "paths = []\n",
+        "for dirname, _, filenames in os.walk('/kaggle/input'):\n",
+        "    for filename in filenames:\n",
+        "        paths.append(os.path.join(dirname, filename))\n",
+        "        print(os.path.join(dirname, filename))\n",
+        "\n",
+        "import warnings\n",
+        "warnings.filterwarnings('ignore')\n",
+        "pd.set_option('display.max_columns',None)\n",
+        "\n",
+        "#Import Transformers\n",
+        "from sklearn.preprocessing import LabelEncoder, OneHotEncoder, MinMaxScaler\n",
+        "from sklearn.pipeline import Pipeline\n",
+        "from sklearn.compose import ColumnTransformer\n",
+        "from sklearn.impute import SimpleImputer\n",
+        "\n",
+        "# Import Accuracy Metrics\n",
+        "from sklearn.metrics import accuracy_score, roc_auc_score\n",
+        "from sklearn.metrics import confusion_matrix\n",
+        "from sklearn.metrics import classification_report\n",
+        "\n",
+        "# Import Classifiers\n",
+        "from xgboost import XGBClassifier\n",
+        "from lightgbm import LGBMClassifier\n",
+        "from catboost import CatBoostClassifier\n",
+        "from sklearn.ensemble import VotingClassifier\n",
+        "\n",
+        "# Import Model Selection\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "# Get CSS root file from github\n",
+        "# You can create various CSS templates and load it into your notebooks\n",
+        "!wget https://raw.githubusercontent.com/IamDal/IamDal/main/Neutral.css -O Neutral.css -q\n",
+        "\n",
+        "# Load CSS file\n",
+        "from IPython.core.display import HTML\n",
+        "with open('./Neutral.css', 'r') as file:\n",
+        "    custom_css = file.read()\n",
+        "HTML(custom_css)"
+      ],
+      "metadata": {
+        "id": "jyYT-ft66g_9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define Palette\n",
+        "palette = ['#8D7B68', '#F1DEC9', '#C8B6A6', '#A4907C',\n",
+        "           '#BBD6B8', '#DBE4C6', '#AEC2B6', '#94AF9F']\n",
+        "\n",
+        "# Create a dictionary of RC values for matplotlib\n",
+        "rc = {\n",
+        "    \"axes.facecolor\": \"#FFFFFF\",\n",
+        "    \"figure.facecolor\": \"#FFFFFF\",\n",
+        "    \"axes.edgecolor\": \"#C8B6A6\",\n",
+        "    \"grid.color\": \"#C8B6A6\",\n",
+        "    \"font.family\": \"monospace\",\n",
+        "    \"font.monospace\" : \"Computer Modern Typewriter\",\n",
+        "    \"axes.labelcolor\": \"#8D7B68\",\n",
+        "    \"xtick.color\": \"#8D7B68\",\n",
+        "    \"ytick.color\": \"#8D7B68\",\n",
+        "    \"grid.alpha\": 0.5,\n",
+        "    \"xtick.labelsize\" : 10,\n",
+        "    \"ytick.labelsize\" : 10,\n",
+        "    \"axes.titlesize\" : 12,\n",
+        "    \"axes.labelsize\" : 9,\n",
+        "    \"legend.fontsize\" : 6,\n",
+        "    \"legend.title_fontsize\" : 8,\n",
+        "    \"axes.titlecolor\" : \"#8D7B68\",\n",
+        "    \"figure.raise_window\" : True,\n",
+        "    \"text.color\" : \"#8D7B68\"\n",
+        "}\n",
+        "\n",
+        "# Set RC values\n",
+        "sns.set(rc=rc)\n",
+        "\n",
+        "from colorama import Style, Fore\n",
+        "red = Style.BRIGHT + Fore.RED\n",
+        "blu = Style.BRIGHT + Fore.BLUE\n",
+        "mgt = Style.BRIGHT + Fore.MAGENTA\n",
+        "gld = Style.BRIGHT + Fore.YELLOW\n",
+        "res = Style.RESET_ALL"
+      ],
+      "metadata": {
+        "id": "M_8CeA-A6liY"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
