--- a/s4e02.ipynb
+++ b/s4e02.ipynb
@@ -2321,6 +2321,223 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def summary(df):\n",
+        "    \"\"\"\n",
+        "    Displays a dataframe and it's shape as summary\n",
+        "    df = takes a dataframe as input\n",
+        "    returns the summary of the dataframe. ie:\n",
+        "    shape, data types, count,number of missing values,\n",
+        "    percentage of missing values and number of unique\n",
+        "    values\n",
+        "    \"\"\"\n",
+        "    # Displays shape of Dataframe\n",
+        "    print(f\"DataFrame summary:\\nNumber of DataFrame columns:\\\n",
+        "          {df.shape[1]}\\nNumber of DataFrame entries:{df.shape[0]}\")\n",
+        "    print(\"-\"*40)\n",
+        "\n",
+        "    # Creates  a new dataframe\n",
+        "    summary = pd.DataFrame()\n",
+        "\n",
+        "    # Add a column for datatypes\n",
+        "    summary['Dtype'] = df.dtypes\n",
+        "\n",
+        "    # Add a column for count\n",
+        "    summary['Count'] = df.count()\n",
+        "\n",
+        "    # Add a column for count of missing values\n",
+        "    summary['MissingCount'] = df.isnull().sum()\n",
+        "\n",
+        "    # Add a column for missing percentage\n",
+        "    summary['Missing%%'] = (df.isnull().sum()/traindf.shape[0])*100\n",
+        "\n",
+        "    # Add a column for count of unique values\n",
+        "    summary['UniqueValues'] = df.nunique()\n",
+        "\n",
+        "    # Return Dataframe of summary\n",
+        "    return summary\n",
+        "\n",
+        "\n",
+        "def feature_importance(models, df, ytest, Xtest):\n",
+        "    \"\"\"\n",
+        "    It takes a lis of models, Dataframe and Test data as input\n",
+        "    and displays a horizontal bar chart of the features sorted by\n",
+        "    importance values of the imported model. It also displays\n",
+        "    a confusion matrix of the predicted results\n",
+        "    \"\"\"\n",
+        "\n",
+        "    # Set figure and axes\n",
+        "    fig, axes = plt.subplots(len(models),2,figsize=(10*len(models),10*len(models)),sharey=False,\n",
+        "                            gridspec_kw = {'hspace': 0.4, 'wspace': 0.5})\n",
+        "\n",
+        "    # Iterate over the list of models\n",
+        "    for i,model in enumerate(models):\n",
+        "        y_pred = model.predict(Xtest)\n",
+        "\n",
+        "        # Get the name of the model\n",
+        "        name = type(model.named_steps['model']).__name__\n",
+        "\n",
+        "        # Print Classification Report\n",
+        "        print(name)\n",
+        "        print(classification_report(ytest, y_pred))\n",
+        "\n",
+        "        # Get the feature importance values\n",
+        "        feature_value = model.named_steps['model'].feature_importances_\n",
+        "\n",
+        "        # Get the name of features\n",
+        "\n",
+        "        if hasattr(model.named_steps['preprocessor'], 'get_feature_names_out'):\n",
+        "            features = model.named_steps['preprocessor'].get_feature_names_out(df.columns)\n",
+        "\n",
+        "        # Create Dataframe of important feature\n",
+        "        feature_importance_df = pd.DataFrame({'Feature': features, 'Importance': feature_value})\\\n",
+        "                                                .sort_values(by='Importance', ascending=False)\n",
+        "\n",
+        "        # Plot Features\n",
+        "        ax = axes[i,0]\n",
+        "        sns.barplot(feature_importance_df,x='Importance',y='Feature',palette = palette,ax=ax)\n",
+        "        plt.suptitle(f'Feature Importance',y=.92)\n",
+        "        ax.set_title(f'{name} Feature Importance')\n",
+        "\n",
+        "        # Annotate barplot\n",
+        "        for p in ax.patches:\n",
+        "            ax.annotate(f'{p.get_width():.2f}', (p.get_width(), p.get_y() + p.get_height() / 20),\n",
+        "                        ha='center', va='center', xytext=(18, -12), textcoords='offset points')\n",
+        "\n",
+        "        # Plot Confusion Matrix\n",
+        "        ax = axes[i,1]\n",
+        "        ytest_labels = encoder.inverse_transform(ytest)\n",
+        "        y_pred_labels = encoder.inverse_transform(y_pred)\n",
+        "        labels = list(pd.Series(ytest_labels).unique())\n",
+        "        cm = confusion_matrix(ytest_labels, y_pred_labels)\n",
+        "        sns.heatmap(cm, annot=True, ax = ax,fmt='0g',cmap='YlOrBr')\n",
+        "        ax.set_xticklabels(labels, rotation=45, ha='right')\n",
+        "        ax.set_yticklabels(labels, rotation=0)\n",
+        "\n",
+        "        ax.set_xlabel('Predicted labels')\n",
+        "        ax.set_ylabel('True labels')\n",
+        "        ax.set_title(f'{name} Confusion Matrix')\n",
+        "\n",
+        "    # display chart\n",
+        "    plt.tight_layout()\n",
+        "    plt.show()\n",
+        "\n",
+        "\n",
+        "# Function to get a list of categorical and numerical columns\n",
+        "def get_catnum(df):\n",
+        "    \"\"\"\n",
+        "    Takes a dataframe(df) and dseparates\n",
+        "    categorical features and numerical\n",
+        "    features and returns a list for each set.\n",
+        "    \"\"\"\n",
+        "    # Create a dataframe of the unique value count\n",
+        "    condition = pd.DataFrame(df.nunique(),columns=['Unique'])\n",
+        "\n",
+        "    # Drop features with unique count less than 10\n",
+        "    categorical_features = list(condition[condition < 10].dropna().index)\n",
+        "\n",
+        "    # Drop categorical features from total features\n",
+        "    numeric_features = list(set(df.select_dtypes(['int64','float64']).columns) - set(categorical_features))\n",
+        "\n",
+        "    # Return list of categorical and numerical features\n",
+        "    return categorical_features, numeric_features\n",
+        "\n",
+        "\n",
+        "# Function to plot numercal features against categorical features\n",
+        "def distribution_view(df,numeric,target):\n",
+        "\n",
+        "    # Get the number of numeric columns\n",
+        "    features_num = len(numeric)\n",
+        "\n",
+        "    # Set figure and axes\n",
+        "    fig, axes = plt.subplots(features_num, 3,figsize=(16, features_num * 3),\n",
+        "                             gridspec_kw = {'hspace': 0.3, 'wspace': 0.6,\n",
+        "                                            'width_ratios': [0.80, 0.80, 0.50]})\n",
+        "\n",
+        "    # Iterate over the list of numeric features\n",
+        "    for i, num in enumerate(numeric):\n",
+        "\n",
+        "        # Set axes and creates a KDE plot\n",
+        "        ax = axes[i,0]\n",
+        "        sns.kdeplot(df, x=num, hue=target, palette=palette,\n",
+        "                    shade=True, ax=ax)\n",
+        "\n",
+        "        # Set axes and creates a violin plot\n",
+        "        ax = axes[i,1]\n",
+        "        sns.stripplot(df, x=num, palette=palette, ax=ax, y='NObeyesdad',\n",
+        "                       hue=target,dodge=True)\n",
+        "\n",
+        "\n",
+        "        # Set axes and creates a box plot\n",
+        "        ax = axes[i,2]\n",
+        "        sns.boxplot(df, x=num, y=target, palette=palette,\n",
+        "                    showfliers=False, notch=False, ax=ax, orient ='h')\n",
+        "\n",
+        "    # Set title and show plot\n",
+        "    plt.suptitle(f'Distribution Charts of Numerical Features with {target}',y=.9)\n",
+        "    plt.tight_layout()\n",
+        "    plt.show()\n",
+        "\n",
+        "\n",
+        "# Function to plot numercal features against numerical features\n",
+        "def contiuos_view(df,numeric,target):\n",
+        "\n",
+        "    # Get the number of numeric features\n",
+        "    number_of_features = len(numeric)\n",
+        "\n",
+        "    # Set figure and axes\n",
+        "    fig, axes = plt.subplots(1,number_of_features ,figsize = (number_of_features * 4,3),\n",
+        "                             gridspec_kw = {'hspace': 0.4, 'wspace': 0.4})\n",
+        "\n",
+        "    # Iterate over the list of numeric features\n",
+        "    for i, num in enumerate(numeric):\n",
+        "\n",
+        "        # Set axes and creates a scatterplot\n",
+        "        ax = axes[i]\n",
+        "        sns.scatterplot(df, y=num, x=target,\n",
+        "                        palette=palette,\n",
+        "                        ax=ax, hue='NObeyesdad')\n",
+        "\n",
+        "    # Set title and show plot\n",
+        "    plt.suptitle(f'Distribution Charts of Numerical Features with {target}',y=.95)\n",
+        "    plt.tight_layout()\n",
+        "    plt.show()\n",
+        "\n",
+        "\n",
+        "def side_by_side(*args):\n",
+        "    \"\"\"\n",
+        "    Displays dataframes side by side\n",
+        "    '('Ideally to be used in tandem with\n",
+        "    the summary function')'\n",
+        "    the other dataframe columns will be\n",
+        "    renamed.\n",
+        "    \"\"\"\n",
+        "    # Returns error if less than two dataframes are passed\n",
+        "    if len(args) < 2:\n",
+        "        raise ValueError(\"At least two DataFrames are required for concatenation.\")\n",
+        "\n",
+        "    # Initialize new dataframe with the first argument\n",
+        "    concatenated_df = summary(args[0])\n",
+        "\n",
+        "    # Iterate over the elements of the arguments\n",
+        "    for i, arg in enumerate(args[1:]):\n",
+        "        summ = summary(arg)\n",
+        "\n",
+        "        # Rename columns in dataframe\n",
+        "        summ.columns = 'DF'+ f'{i+1}_' +summ.columns\n",
+        "\n",
+        "        # Concatenate dataframes\n",
+        "        concatenated_df = pd.concat([concatenated_df,summ], axis = 1)\n",
+        "    return concatenated_df"
+      ],
+      "metadata": {
+        "id": "yOooG0xN6qYz"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
