--- a/s4e02.ipynb
+++ b/s4e02.ipynb
@@ -2538,6 +2538,48 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Read CSV files to DataFrames\n",
+        "traindf = pd.read_csv('/content/playground-series-s4e2/train.csv')\n",
+        "testdf = pd.read_csv('/content/playground-series-s4e2/test.csv')\n",
+        "train_extra = pd.read_csv('/content/obesity-or-cvd-risk-classifyregressorcluster/ObesityDataSet.csv')"
+      ],
+      "metadata": {
+        "id": "mqZUu1TB-t59"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Display data sets\n",
+        "space = 60*'*'\n",
+        "display(f'{space}Train Dataframe 1{space}',traindf.head(),\n",
+        "        f'{space}Train Dataframe 2{space}',train_extra.head(),\n",
+        "        f'{space}Test Dataframe{space}',testdf.head())"
+      ],
+      "metadata": {
+        "id": "XEH21_9fW8kG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Display a concatonated view of the dataframes' summaries\n",
+        "side_by_side(traindf,testdf,train_extra)\\\n",
+        "    .style.background_gradient(cmap='YlOrBr')"
+      ],
+      "metadata": {
+        "id": "DEcz0XzOXBAu"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
