--- a/s4e02.ipynb
+++ b/s4e02.ipynb
@@ -2580,6 +2580,47 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Rename inconsistent columns\n",
+        "train_extra = train_extra.reset_index(names='id')\n",
+        "train_extra['id'] = train_extra['id'] + traindf.shape[0]\n",
+        "\n",
+        "# Concatenate Dataframes\n",
+        "traindf = pd.concat([traindf,train_extra],ignore_index=True)\n",
+        "\n",
+        "# Display summary of new dataframe\n",
+        "summary(traindf).style.background_gradient(cmap='YlOrBr')"
+      ],
+      "metadata": {
+        "id": "0jMS7TfDXCg4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "encoder= LabelEncoder()\n",
+        "train_gender = encoder.fit_transform(traindf['Gender'])\n",
+        "test_gender = encoder.fit_transform(testdf['Gender'])\n",
+        "\n",
+        "traindf['BMI'] = traindf['Weight']/traindf['Height']**2\n",
+        "testdf['BMI'] = testdf['Weight']/testdf['Height']**2\n",
+        "\n",
+        "traindf['BFP'] = (1.2*traindf['BMI']) + (0.23*traindf['Age']) - ((train_gender * 1) + (train_gender + 1)) * 5.4\n",
+        "testdf['BFP'] = (1.2*testdf['BMI']) + (0.23*testdf['Age']) - ((test_gender * 1) + (test_gender + 1)) * 5.4\n",
+        "\n",
+        "display(traindf.head())\n",
+        "display(testdf.head())"
+      ],
+      "metadata": {
+        "id": "i_B1nnRmhJ6m"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
