--- a/s4e02.ipynb
+++ b/s4e02.ipynb
@@ -2621,6 +2621,71 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Get categorical and numerical features\n",
+        "categorical,numeric = get_catnum(traindf)\n",
+        "\n",
+        "# Remove feature from list\n",
+        "to_remove = ['id']\n",
+        "[numeric.remove(feature) for feature in to_remove if feature in to_remove]\n",
+        "\n",
+        "# Get a sample of the dataframe\n",
+        "sampled = traindf.sample(3000)\n",
+        "\n",
+        "# Iterate over categorical features and plot graphs\n",
+        "for i in categorical:\n",
+        "    distribution_view(sampled,numeric,i)"
+      ],
+      "metadata": {
+        "id": "V5E3PiCshNVi"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Iterate over categorical features and plot graphs\n",
+        "for i in numeric:\n",
+        "    contiuos_view(sampled,numeric,i)\n",
+        "#for i in numeric[6:-1]:\n",
+        "    #contiuos_view(sampled,numeric[6:],i)"
+      ],
+      "metadata": {
+        "id": "SvZ1oYukiGDE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "target = 'NObeyesdad'\n",
+        "features = list(traindf.columns)\n",
+        "\n",
+        "to_remove = [target, 'id','SMOKE']\n",
+        "[features.remove(feature) for feature in to_remove if feature in to_remove]\n",
+        "\n",
+        "encoder = LabelEncoder()\n",
+        "X = traindf[features]\n",
+        "y = pd.Series(encoder.fit_transform(traindf[target]),name = target)\n",
+        "\n",
+        "cat, num = get_catnum(X)\n",
+        "cat = list(set(cat) - set(to_remove))\n",
+        "num = list(set(num) - set(to_remove))\n",
+        "print(f'categorical features : {cat}\\nnumerical features : {num}')\n",
+        "\n",
+        "display(X.head())\n",
+        "display(y.head().to_frame())"
+      ],
+      "metadata": {
+        "id": "vIc7WOI8iOX8"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
