--- a/s4e02.ipynb
+++ b/s4e02.ipynb
@@ -2686,6 +2686,54 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Preprocessing for numerical data: scaling\n",
+        "numerical_transformer = Pipeline(steps=[\n",
+        "    ('scaler',MinMaxScaler())])\n",
+        "\n",
+        "# Preprocessing for categorical data: one-hot encoding\n",
+        "categorical_transformer = Pipeline(steps = [\n",
+        "    ('encoder',OneHotEncoder(handle_unknown=\"ignore\"))])\n",
+        "\n",
+        "# Preprocessing compiler\n",
+        "preprocessor = ColumnTransformer(\n",
+        "    transformers = [\n",
+        "    ('numerical',numerical_transformer,num),\n",
+        "    ('categorical',categorical_transformer,cat)\n",
+        "])"
+      ],
+      "metadata": {
+        "id": "2FmB5ujGiRC5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tranX = preprocessor.fit_transform(X)\n",
+        "if hasattr(preprocessor, 'get_feature_names_out'):\n",
+        "    feature_names = preprocessor.get_feature_names_out(X.columns)\n",
+        "\n",
+        "tranX = pd.DataFrame(tranX,columns = feature_names)\n",
+        "tranX['target'] = y\n",
+        "corr = tranX.corr()['target'].sort_values().to_frame()\n",
+        "\n",
+        "mask = np.triu(np.ones_like(corr, dtype=bool))\n",
+        "\n",
+        "plt.figure(figsize=(10, 16))\n",
+        "sns.heatmap(corr, mask=mask, annot=True, cmap='YlOrBr', fmt='.3f', linewidths=1, square=True, annot_kws={\"size\": 7})\n",
+        "plt.title('Correlation Matrix', fontsize=10)\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "DIfvTp5LQfII"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
