--- a/s4e02.ipynb
+++ b/s4e02.ipynb
@@ -2734,6 +2734,61 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Split training data\n",
+        "Xtrain, Xtest, ytrain, ytest = train_test_split(X,y,test_size=.2,random_state=42)\n",
+        "\n",
+        "# XGBClassifier Hyperparameters\n",
+        "XGB = XGBClassifier(**{'n_estimators': 246, 'max_depth': 3, 'min_samples_split': 10, 'min_samples_leaf': 5,\n",
+        "                       'learning_rate': 0.3688172331168597, 'gamma': 0.07454964296322644, 'random_state': 42})\n",
+        "\n",
+        "# LGBMClassifier Hyperparameters\n",
+        "LGBM = LGBMClassifier(**{'n_estimators': 384, 'max_depth': 9, 'min_child_samples': 20, 'num_leaves': 28,\n",
+        "                         'learning_rate': 0.02305099844085421, 'subsample': 0.23321790403102516,\n",
+        "                         'colsample_bytree': 0.4728996172493934, 'random_state':42, 'objective':'multiclass',\n",
+        "                        'num_class':7,'verbose':0})\n",
+        "\n",
+        "# Create Pipelines\n",
+        "XGB_pipe = Pipeline(steps = [\n",
+        "    ('preprocessor',preprocessor),('model',XGB)])\n",
+        "\n",
+        "LGBM_pipe = Pipeline(steps = [\n",
+        "    ('preprocessor',preprocessor),('model',LGBM)])\n",
+        "\n",
+        "\n",
+        "def fit(model,Xtrain, Ytrain, Xtest, Ytest):\n",
+        "    model.fit(Xtrain, Ytrain)\n",
+        "    predictions = model.predict(Xtest)\n",
+        "    accuracy = accuracy_score(Ytest, predictions)\n",
+        "    return accuracy\n",
+        "\n",
+        "Classifiers = [XGB_pipe,LGBM_pipe]\n",
+        "\n",
+        "[print(f'{type(pipe.named_steps[\"model\"]).__name__} = {fit(pipe,Xtrain,ytrain,Xtest,ytest)}') for pipe in Classifiers]"
+      ],
+      "metadata": {
+        "id": "H4Lx1i0vQjRE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# List of Classifiers\n",
+        "models = [XGB_pipe,LGBM_pipe]\n",
+        "\n",
+        "# Display feature importance\n",
+        "feature_importance(models, Xtrain, ytest,Xtest)"
+      ],
+      "metadata": {
+        "id": "5mH3YpiWQu_k"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
