--- a/s4e02.ipynb
+++ b/s4e02.ipynb
@@ -2789,6 +2789,58 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create a VotingClassifier with the three XGBoost models\n",
+        "voting = VotingClassifier(estimators=[\n",
+        "    ('Model1', LGBM_pipe),\n",
+        "    ('Model3', XGB_pipe),\n",
+        "    #('Model4', CATB_pipe)\n",
+        "], voting='soft', weights = [0.6,0.4])\n",
+        "\n",
+        "voting.fit(Xtrain, ytrain)\n",
+        "\n",
+        "predict = voting.predict(Xtest)\n",
+        "\n",
+        "acuu = accuracy_score(ytest, predict)\n",
+        "acuu"
+      ],
+      "metadata": {
+        "id": "LwBx-hnLQys1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "voting.fit(X,y)"
+      ],
+      "metadata": {
+        "id": "LRSRpYxjcK4D"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pred = voting.predict(testdf[features])\n",
+        "output = pd.DataFrame()\n",
+        "output['id'] = testdf.id\n",
+        "output[target] = pred\n",
+        "output[target] = encoder.inverse_transform(output[target])\n",
+        "output.to_csv('submission.csv', index = False)\n",
+        "print(\"Your submission was successfully saved!\")\n",
+        "output.head()"
+      ],
+      "metadata": {
+        "id": "jPT05NhScNkC"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
